Bug 149615 - French UI (maybe other languages too): "No list" entrance appears twice in Outline & Style tab
Summary: French UI (maybe other languages too): "No list" entrance appears twice in Ou...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.4.2 release
Hardware: All All
: medium trivial
Assignee: Julien Nabet
URL:
Whiteboard: target:7.5.0 target:7.4.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-19 10:15 UTC by phv
Modified: 2022-07-15 11:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
French UI vs. English UI: No list entrance appears twice (53.01 KB, image/png)
2022-06-19 10:15 UTC, phv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description phv 2022-06-19 10:15:29 UTC
Created attachment 180824 [details]
French UI vs. English UI: No list entrance appears twice

This bug has been reproduced in LibreOffice 7.3 and LibreOfficeDev 7.5 using the French user interface. I do not exclude that it occurs in other languages, but it cannot be reproduced with the English interface.

Steps to Reproduce:
1. In options, set the language of user interface in French.
2. In a new Writer document, select a paragraph style then open the Outline & List tab ("Plan & liste").
3. Click the List Style ("Style de liste") drop-down list.


Actual Result:
No list ("Pas de liste") appears twice.

Expected Result:
No list ("Pas de liste") entrance should appear only once.
Comment 1 Julien Nabet 2022-06-19 13:32:44 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this with French UI and KeyID UI.
Comment 2 Julien Nabet 2022-06-19 21:21:16 UTC
I gave a try with https://gerrit.libreoffice.org/c/core/+/136110
Comment 3 Commit Notification 2022-06-23 10:53:50 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b6dfa2b7472a55b92de95732a0067c3a2f586c51

tdf#149615: "No list" twice in Outline & Style tab (non English UI only)

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Julien Nabet 2022-06-23 10:54:45 UTC
Cherry pick for 7.4 waiting for review here:
https://gerrit.libreoffice.org/c/core/+/136317
Comment 5 Commit Notification 2022-06-25 03:41:01 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/c22fc180845c4d170b412e8ea11a65dc7124a18a

tdf#149615: "No list" twice in Outline & Style tab (non English UI only)

It will be available in 7.4.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 phv 2022-07-15 11:19:01 UTC
Thank you for having fixed this minor bug!