tdf#149615: "No list" twice in Outline & Style tab (non English UI only)

Change-Id: I8a983b62175ed00ca8817556bd3e55fc87ddc9d7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136110
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit f340442cde0c3e91768adcef164b41b5556b3835)