sw/source/ui/fmtui/tmpdlg.cxx
@@ -457,7 +457,7 @@ void SwTemplateDlgController::PageCreated(const OString& rId, SfxTabPage &rPage 
                 aNames.insert(pBase->GetName());
                 pBase = pPool->Next();
             }
-            aNames.erase("No List");
+            aNames.erase(SwResId(STR_POOLNUMRULE_NOLIST));
             for(std::set<OUString>::const_iterator it = aNames.begin(); it != aNames.end(); ++it)
                 rBox.append_text(*it);
         }
